# item_recommendations_retail

./: .gitignore  README.md  analysis.ipynb  hello.py  main.py  presentation.pptx  pyproject.toml  testing.ipynb
data/: custs.csv  items.csv  lift.csv  recommendations.csv  recommendations_3.csv  recommendations_main.csv  recommendations_main.xlsx
