[project]
name = "sainburys-tech-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.18",
    "jupyterlab>=4.3.6",
    "numpy<2",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.0.1",
    "transformers>=4.50.3",
    "torch<2.3.0",
    "torchvision>=0.17.2",
    "torchaudio>=2.2.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
